# fastapi_htmx_quant

./: .gitignore  README.md  poetry.lock.bak  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 4b1aece263e2_create_tables.py
databases/: README.md
src/: main.py
src/cowpoke/: database_connection.py  models.py  non_return_rate.py  nrr_data_demo.csv  routes.py  routes_bulls.py  routes_farms.py  routes_jobs.py  routes_non_return_rates.py  routes_technicians.py
src/cowpoke/herd_improvement/: LatestLactation_2025_25_01_26.csv  create_powerpoint.py  create_reports.py  lactation_calculations.py  routes.py
src/cowpoke/non_return_rate/: non_return_rate.py  routes.py
src/cowpoke/templates/: cowpoke_home.html  farm_view.html  farms.html  inseminations.html  jobs.html  technicians.html
src/gantt/: database_connection.py  models.py  routes.py
src/gantt/templates/: gantt_home.html
src/loan_payment_calculator/: models.py  routes.py
src/processing/: cmdc_interest_rate.py  loan_payment_calculator.py  statistical_arbitrage.py  statistical_arbitrage_pyquant_news.py
src/static/: base.css  inspiration.css  loan_payment_calculator.css  monetary_model.js  report.css
src/temp/cowpoke/: README.md
src/templates/: annuity_formula_derivation.html  body_fat.html  cashflow_table.html  cdmc_calculation_result.html  cdmc_interest_rate.html  index.html  loan_payment_calculator.html  monetary_model.html  navigation_bar.html  styles_and_scripts.html
src/templates/cowpoke/: bull_view.html  bulls.html  cow_box.html  cowpoke_home.html  db_table.html  farms.html  (+13 more)
(+10 files in other folders)
