[tool.poetry]
name = "fastapi-htmx-quant"
version = "0.1.0"
description = "Website demonstrating FastAPI and HTMX for Quant applications."
authors = ["Nat Lund <natjlund@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
sqlmodel = "*"
alembic = "*"
numpy = "*"
pandas = "*"
statsmodels ="*"
matplotlib = "*"
seaborn = "*"
yfinance = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
